# pee-easque-tree

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: publish.yml
ps3-update-core/: Cargo.toml  README.md
ps3-update-core/examples/: batch_fetch.rs  standalone.rs  test_small_download.rs
ps3-update-core/src/: downloader.rs  fetcher.rs  lib.rs  types.rs  utils.rs
public/ps3-wave-react-demo/: README.md  index.html  package-lock.json  package.json
public/ps3-wave-react-demo/src/: App.tsx  ps3-bg.css
public/ps3-wave-react-demo/src/components/: Ps3WaveBackground.tsx
src/: App.css  App.css.backup  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FloatingLines.tsx  Ps3WaveBackground.css  Ps3WaveBackground.tsx
src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  drawer.tsx  scroll-area.tsx  typography.tsx
src/data/: ps3-facts.json
