[package]
name = "ps3-update-core"
version = "0.1.0"
description = "Core library for fetching and downloading PS3 game updates from Sony's servers"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
quick-xml = { version = "0.36", features = ["serialize"] }
bytes = "1"
futures-util = "0.3"
thiserror = "1"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
